--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <main class="row">
   <div class="col-md-12">
-    <h2 class="text-center group-name">Qualifiers 1</h2>
+    <h2 class="text-center group-name">Qualifiers</h2>
 
     <div class="row">
       <div class="col-sm-4">
@@ -164,7 +164,7 @@
     </div>
   </div>
   <div class="col-md-12">
-    <h2 class="text-center group-name">Qualifiers 2</h2>
+    <h2 class="text-center group-name">Semi-Finals</h2>
 
     <div class="row">
       <div class="col-sm-4">
